--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- <!DOCTYPE html>
+<!-- <html lang="en"> -->
 
 <head>
     <meta charset="UTF-8">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+<!--             </section>
             <div data-e2e="wallet-buy-coins-title" class="front-DivRechargeCoins eyr93xl0 font-18 fw-bold"><span>Recharge:</span> <span style="color:rgb(243, 69, 69);">Save upto 31% compared to in-app purchase </span><span><i class="fa-thin fa-circle-exclamation fa-rotate-180" style="font-size: 15px;"></i></span>
             </div>
             <div class="mt-3 container ml-0 main-grid">
@@ -127,7 +127,7 @@
                             <div class="front-DivTextContainer e4yj8b64"><span
                                     data-e2e="wallet-package-price-2" class="front-SpanTextNow ">$
                                     0.85</span></div>
-                        </button></li>
+                        </button></li> -->
                         <li><button data-e2e="wallet-package-2" id="350" aria-label="700 Coins" aria-selected="false" data-coin="350"
                             class="front-ButtonContainer e4yj8b60" onclick=coinCalculation(3.7,350)>
                             <div class="front-DivNumContainer"><span
@@ -651,7 +651,7 @@ function countdownTimer() {
 
 </script>
 
-<script>
+<!-- <script>
     // Function to append the value to the input field
     function calCoin(value) {
       
@@ -680,7 +680,7 @@ function countdownTimer() {
     }
 </script>
 
-
+ -->
 
 <!-- //jQuery Links -->
 <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
@@ -688,5 +688,5 @@ function countdownTimer() {
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.5/slick.min.js"></script>
 <script src="./assets/jQuery/app.js"></script>
-
-</html>
+<!--  -->
+<!-- </html> --> -->
